@@ -1,7 +1,7 @@
 plugins {
     id("com.livefront.sealedenum.kotlin")
     id("com.livefront.sealedenum.detekt")
-    kotlin("kapt")
+    alias(libs.plugins.ksp)
 }
 
 /**
@@ -19,6 +19,7 @@ kotlin {
             }
             if (!disableForSharedCode) {
                 kotlin.srcDir("$rootDir/processing-tests/common/src/commonMain")
+                kotlin.srcDir("$rootDir/processing-tests/ksp-common-tests/src/commonMain")
             }
         }
 
@@ -29,11 +30,14 @@ kotlin {
             }
             if (!disableForSharedCode) {
                 kotlin.srcDir("$rootDir/processing-tests/common/src/commonTest")
+                kotlin.srcDir("$rootDir/processing-tests/ksp-common-tests/src/commonTest")
             }
         }
 
         val jvmMain by getting {
-            configurations["kapt"].dependencies.add(projects.processor)
+            dependencies {
+                project.dependencies.add("kspJvm", projects.ksp)
+            }
             if (!disableForSharedCode) {
                 kotlin.srcDir("$rootDir/processing-tests/common/src/jvmMain")
             }
@@ -43,17 +47,16 @@ kotlin {
             dependencies {
                 implementation(libs.junit.jupiter)
                 implementation(libs.kotlinCompileTesting.base)
-                implementation(projects.processor)
+                implementation(libs.kotlinCompileTesting.ksp)
+                implementation(libs.ksp.runtime)
+                implementation(libs.ksp.api)
+                implementation(projects.ksp)
             }
             if (!disableForSharedCode) {
                 kotlin.srcDir("$rootDir/processing-tests/common/src/jvmTest")
             }
         }
     }
-}
-
-kapt {
-    includeCompileClasspath = false
 }
 
 if (!disableForSharedCode) {
@@ -84,22 +87,4 @@ detekt {
         "$rootDir/processing-tests/common/src/jvmTest/java",
         "$rootDir/processing-tests/common/src/jvmTest/kotlin"
     )
-}
-
-// See https://github.com/tschuchortdev/kotlin-compile-testing#java-16-compatibility
-if (JavaVersion.current() >= JavaVersion.VERSION_16) {
-    tasks.withType<Test>().all {
-        jvmArgs(
-            "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        )
-    }
 }
